--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,9 @@ azure-servicemanagement-legacy==0.20.2
 azure-storage==0.20.3
 futures==3.0.5
 python-dateutil==2.5.3
+python-ntlm3==1.0.2
+pywinrm==0.2.1
 requests==2.11.1
+requests-ntlm==0.3.0
 six==1.10.0
+xmltodict==0.10.2
