--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+.idea/azure_test.iml
+.idea/misc.xml
